# wordle-rust-server

./: .gitignore  Cargo.toml
src/: main.rs  server.rs  test.rs  words.rs
