[package]
name = "http-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.1"
lazy_static = "1.4.0"
serde = "1.0.136"
serde_derive = "1.0.136"
tokio = "1.17.0"
uuid = { version="1.0.0-alpha.1", features=["v4"] }
